[package]
name = "egui-timeline"
version = "0.1.0"
edition = "2021"
authors = ["Nemanja Petrasinovic"]
description = "egui timeline widget"
repository = "https://github.com/nemanjapetrasinovic/egui-timeline"
homepage = "https://github.com/nemanjapetrasinovic/egui-timeline"
license = "GPL-3.0"
readme = "README.md"
keywords = ["egui", "timeline", "egui-timeline", "widget"]
categories = ["egui-widgets"]

[dependencies]
egui = "0.27.2"

[dev-dependencies]
eframe = "0.27.2"
